Committng Quiz date and Quiz Time

--- a/src/app/pages/admin/add-quiz/add-quiz.component.html
+++ b/src/app/pages/admin/add-quiz/add-quiz.component.html
@@ -60,22 +60,22 @@
 
       <!-- Quiz Type Section -->
       <div class="form-section">
-  <h3 class="section-title">
-    <mat-icon>assignment</mat-icon>
-    Quiz Type
-  </h3>
+        <h3 class="section-title">
+          <mat-icon>assignment</mat-icon>
+          Quiz Type
+        </h3>
 
-  <mat-button-toggle-group [(ngModel)]="quizData.quizType" name="quizType" appearance="legacy">
-    <mat-button-toggle value="THEORY">THEORY</mat-button-toggle>
-    <mat-button-toggle value="OBJ">OBJ</mat-button-toggle>
-    <mat-button-toggle value="BOTH">BOTH</mat-button-toggle>
-  </mat-button-toggle-group>
-</div>
+        <mat-button-toggle-group [(ngModel)]="quizData.quizType" name="quizType" appearance="legacy">
+          <mat-button-toggle value="THEORY">THEORY</mat-button-toggle>
+          <mat-button-toggle value="OBJ">OBJ</mat-button-toggle>
+          <mat-button-toggle value="BOTH">BOTH</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
 
-<div *ngIf="!quizData.quizType && quizFormSubmitted" class="error-msg">
-  <mat-icon color="warn">error</mat-icon>
-  Quiz Type is required!
-</div>
+      <div *ngIf="!quizData.quizType && quizFormSubmitted" class="error-msg">
+        <mat-icon color="warn">error</mat-icon>
+        Quiz Type is required!
+      </div>
 
 
 
@@ -102,91 +102,36 @@
           </mat-form-field>
         </div>
 
-        <div class="form-row" >
+        <div class="form-row">
           <div *ngIf="quizData.quizType !== 'THEORY' && quizData.quizType">
-          <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Time Limit (minutes)</mat-label>
-            <input matInput type="number" [(ngModel)]="quizData.quizTime" name="quizTime">
-            <mat-icon matSuffix>timer</mat-icon>
-          </mat-form-field>
+            <mat-form-field appearance="outline" class="form-field">
+              <mat-label>Time Limit (minutes)</mat-label>
+              <input matInput type="number" [(ngModel)]="quizData.quizTime" name="quizTime">
+              <mat-icon matSuffix>timer</mat-icon>
+            </mat-form-field>
           </div>
-       
 
-        <!-- Password Always Visible -->
-        
+
+          <!-- Password Always Visible -->
+<!-- 
           <mat-form-field appearance="outline" class="form-field">
             <mat-label>Quiz Password</mat-label>
             <input matInput [(ngModel)]="quizData.quizpassword" name="quizpassword" type="password">
             <mat-icon matSuffix>vpn_key</mat-icon>
             <mat-hint>Optional password protection</mat-hint>
-          </mat-form-field>
+          </mat-form-field> -->
+
+             <mat-form-field appearance="outline" class="form-field">
+              <mat-label>Quiz Password</mat-label>
+              <input matInput [(ngModel)]="quizData.quizpassword" name="quizpassword" type="password"
+                [type]="hide ? 'password' : 'text'">
+              <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+              </button> <mat-hint>Optional password protection</mat-hint>
+            </mat-form-field>
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <!-- Quiz Configuration Section -->
-      <!-- <div class="form-section">
-        <h3 class="section-title">
-          <mat-icon>settings</mat-icon>
-          Quiz Configuration
-        </h3>
-        
-        <div class="form-row">
-          <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Max Marks</mat-label>
-            <input matInput type="number" [(ngModel)]="quizData.maxMarks" name="maxMarks">
-            <mat-icon matSuffix>score</mat-icon>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Total Questions</mat-label>
-            <input matInput type="number" [(ngModel)]="quizData.numberOfQuestions" name="numberOfQuestions">
-            <mat-icon matSuffix>help_outline</mat-icon>
-          </mat-form-field>
-        </div>
-
-        <div class="form-row">
-          <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Quiz Password</mat-label>
-            <input matInput [(ngModel)]="quizData.quizpassword" name="quizpassword" type="password">
-            <mat-icon matSuffix>vpn_key</mat-icon>
-            <mat-hint>Optional password protection</mat-hint>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Time Limit (minutes)</mat-label>
-            <input matInput type="number" [(ngModel)]="quizData.quizTime" name="quizTime">
-            <mat-icon matSuffix>timer</mat-icon>
-          </mat-form-field>
-        </div>
-      </div> -->
 
       <!-- Schedule & Publishing Section -->
       <div class="form-section">
@@ -223,15 +168,10 @@
           <mat-icon>close</mat-icon>
           Cancel
         </button>
-        <button 
-  mat-raised-button 
-  color="primary" 
-  type="submit" 
-  class="submit-btn"
-  [disabled]="!quizData.quizType">
-  <mat-icon>add</mat-icon>
-  Create Quiz
-</button>
+        <button mat-raised-button color="primary" type="submit" class="submit-btn" [disabled]="!quizData.quizType">
+          <mat-icon>add</mat-icon>
+          Create Quiz
+        </button>
       </div>
     </form>
   </mat-card-content>
