--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,4 +1,6 @@
-<!-- {{currentQuestions|json}} -->
+{{currentQuestions|json}}
+
+{{  qid| json}}
 <div class="bootstrap-wrapper">
     <!-- Loading Spinner -->
     <div *ngIf="isLoading" class="loading-overlay">
@@ -37,7 +39,96 @@
                     <h1 class="mt20">On going quiz {{quizTitle}} for <b> {{courseTitle}}</b></h1>
                 </ng-container>
 
-                <div *ngIf="questions.length>0">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <div *ngIf="questions?.length>0">
                     <div *ngIf="questions">
                         <mat-card class="cards"
                             style="font-family: 'Times New Roman', Times, serif; font-size:18px; color: white;text-align: center; background-color: purple;">
@@ -95,6 +186,151 @@
                         </pagination-controls>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
                 <!-- subjective questions here -->
                 <div *ngIf="currentQuestions; else elseBlock">
